test/tools/router_check/test/config/DefaultRuntime.yaml
virtual_hosts:
- name: local_service
  domains:
  - '*'
  routes:
  - match:
      prefix: "/foo"
      headers:
      - name: ":authority"
    route:
      cluster_header: ":authority"
  - match:
      prefix: "/bar"
    route:
      cluster_header: "some_header"
      timeout:
        nanos: 0
  - match:
      safe_regex:
        # 100+ chars regex to test re2.max_program_size.error_level runtime override.
        regex: (?:[a-zA-Z]{3,6}[0-9]{2,4}[A-Z]{1,3}\d{0,2}\W{0,2}){10,20}|(?:[a-zA-Z0-9!@#\$%\^\&\*\)\(+=._-]{25,50})|(?:[A-Z])
    route:
      cluster_header: "some_header"
      timeout:
        nanos: 0
